fix DT-1723, reduce padding for blog search on Mobile

--- a/less/theme.less
+++ b/less/theme.less
@@ -252,6 +252,9 @@ td {
     }
     .form-body {
         padding: 30px 40px;
+        @media @mobile {
+            padding: 20px;
+        }
     }
     .form-group {
         margin-bottom: 0;
